--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       event: イベント
+      ticket: チケット
     attributes:
       event:
         name: 名前
@@ -9,4 +10,6 @@ ja:
         start_at: 開始時間
         end_at: 終了時間
         content: 内容
+      ticket:
+        comment: コメント
         
